# MCP-Host

./: .env.example  .gitignore  .replit  CLAUDE.md  HOSTING-QUICKSTART.md  ONBOARDING.md  README.md  deps-dev.txt  deps.txt  install.sh  pyproject.toml  replit.md
.githooks/: post-commit  pre-push
cli/: main.py
external-enhancements/: 001-social-trader-live-signal-ingest.md  003-owner-bearer-for-off-platform-owner.md
external-enhancements/002-self-serve-platform/: 00-overview.md  01-registration.md  02-owner-deploy.md  03-declarative-proxy.md
external-enhancements/003-managed-datasets/: 00-overview.md
external-enhancements/prds/: 00-overview.md  01-tenantdb-replace-primitive.md  02-social-trader-ingest.md  03-cli-ingest-and-token.md  04-docs-and-close.md
external-requests/: 001-PRD-durable-registration-store.md  001-durable-registration-store.md
mcp_host/: server.py
mcp_host/artifacts/: store.py
mcp_host/auth/: entitlements.py  principal.py  registration.py
mcp_host/billing/: x402.py
mcp_host/data/: dataset_sql.py  factory.py  pg.py  store.py  tenant.py
mcp_host/gateway/: deploy.py  router.py
mcp_host/sdk/: __init__.py  (+7 more)
providers/: __init__.py
schemas/: provider.schema.json
scripts/: verify-deploy.sh
tests/: conftest.py  test_cli.py  test_durable_store.py  test_m0_sdk.py  test_m10_datasets.py  test_m1_auth.py  test_m1_gateway.py  test_m2_artifacts.py  test_m2_data.py  test_m3_billing.py  test_m4_6_providers.py  test_m7_registry.py  test_m9_selfserve.py  test_owner_publisher.py  test_pg_backend.py  test_platform_health.py  test_server_http.py
(+14 files in other folders)
